--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "echarts": "^4.9.0",
     "element-ui": "^2.15.6",
     "lodash": "^4.17.21",
+    "nprogress": "^0.2.0",
     "pure-vue-chart": "^0.4.0",
     "quill": "^1.3.7",
     "v-charts": "^1.19.0",
@@ -29,6 +30,7 @@
     "@vue/composition-api": "^1.2.4",
     "babel-eslint": "^10.1.0",
     "babel-plugin-component": "^1.1.1",
+    "babel-plugin-transform-remove-console": "^6.9.4",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
     "less": "^4.1.1",
